Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/deployment_ubuntu_sd_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-2204-cuda-1180
  labels:
    app: ubuntu-2204-cuda-1180 # change_other_model
  namespace: default  # 如果不是这个命名空间,则修改
spec:
  nodeSelector:
      cloud.google.com/gke-gpu-sharing-strategy: time-sharing
      cloud.google.com/gke-max-shared-clients-per-gpu: "5"  # 2
  volumes:
    - name: stable-diffusion-storage
      persistentVolumeClaim:
        claimName: vol1
  containers:
    - name: ubuntu-2204
      # image: nvidia/cuda:11.8.0-runtime-ubuntu22.04  # dockerfile的基础镜像
      image: us-central1-docker.pkg.dev/happyaigc/sd-web-ui-artifacts/sd-webui:inference5  # 测试打包好的镜像，配合下面的command进行调试
      imagePullPolicy: Always
      ports:
        - containerPort: 7860
      resources:
        limits:
          # cpu: 1000m    #1800m
          # memory: 19Gi  #23Gi
          nvidia.com/gpu: 1  # 有显卡需要这样挂载---如果是普通的pod，无法安装sdk，无法使用gpu
      # command: ["bash","-c","while true;do date;sleep 86400;done"] # 注释掉这个，就会用镜像的启动命令(用于调试启动命令是否正确)---（打开注释）用这个命令调试为什么启动不了； 如果启动的了，就注释掉这个命令
      args: []
      volumeMounts:
        - mountPath: "/root/stable-diffusion-webui/models/Stable-diffusion"
          name: stable-diffusion-storage
          subPath: sdwebui/models/Stable-diffusion/sd15   # change_other_model
        - mountPath: "/root/stable-diffusion-webui/models/ControlNet"
          name: stable-diffusion-storage
          subPath: sdwebui/models/ControlNet
        - mountPath: "/root/stable-diffusion-webui/models/VAE"
          name: stable-diffusion-storage
          subPath: sdwebui/models/VAE
        - mountPath: "/root/stable-diffusion-webui/models/Lora"
          name: stable-diffusion-storage
          subPath: sdwebui/models/Lora
        - mountPath: "/root/stable-diffusion-webui/models/lora"
          name: stable-diffusion-storage
          subPath: sdwebui/models/trainlora
        - mountPath: "/root/stable-diffusion-webui/embeddings"
          name: stable-diffusion-storage
          subPath: sdwebui/models/embeddings
        - mountPath: "/root/stable-diffusion-webui/hypernetworks"
          name: stable-diffusion-storage
          subPath: sdwebui/models/hypernetworks
        - mountPath: "/root/stable-diffusion-webui/scripts"
          name: stable-diffusion-storage
          subPath: sdwebui/models/scripts
        - mountPath: "/root/stable-diffusion-webui/outputs"
          name: stable-diffusion-storage
          subPath: sdwebui/outputs
        - mountPath: "/root/stable-diffusion-webui/samples"
          name: stable-diffusion-storage
          subPath: sdwebui/samples
        - mountPath: "/root/stable-diffusion-webui/localizations"
          name: stable-diffusion-storage
          subPath: sdwebui/models/localizations
        - mountPath: "/root/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete/tags"
          name: stable-diffusion-storage
          subPath: sdwebui/a1111-sd-webui-tagcomplete/tags
        - mountPath: "/root/loopscripts"
          name: stable-diffusion-storage
          subPath: loopscripts
        - mountPath: "/yuanxiao_root_nfs"
          name: stable-diffusion-storage
          # subPath: "/" # 不允许这样写,会报错
          subPath: #这样写不会报错,也是挂载到filestore的根目录,后面留个空格即可
