Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/service_ubuntu_test.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-service-test
spec:
  selector:
    app: ubuntu-2204-cuda-1180
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7860
  type: LoadBalancer
