Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/sd_public_ingress.yaml
# 这种可行，但是需要配置域名,加入泛域名解析即可*.sd这样的； 参考西部数码泛域名配置
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-ingress
spec:
  rules:
  - host: sd15.sd.163py.com
    http:
      paths:
      - backend:
          service:
            name: sd-service-sd15
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: dreamworld.sd.163py.com
    http:
      paths:
      - backend:
          service:
            name: sd-service-dreamworld
            port:
              number: 8080
        path: /
        pathType: Prefix
